--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-04</title>
+    <title>goit-markup-hw-05</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -87,13 +87,20 @@
       <section>
         <div class="container">
           <ul class="card_set_portfolio">
-            <li class="projects_portfolio">
-              <img
-                src="images/Technocrack.jpg"
-                alt="Technocrack"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Technocrack.jpg"
+                  alt="Technocrack"
+                />
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Technocrack</p>
@@ -103,13 +110,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Graphics_New_Orlean_vs_Golden_Star.jpg"
-                alt="New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Graphics_New_Orlean_vs_Golden_Star.jpg"
+                  alt="New Orlean vs Golden Star"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">
@@ -121,13 +130,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Restoration_Seafood.jpg"
-                alt="Restauracja Seafood"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Restoration_Seafood.jpg"
+                  alt="Restauracja Seafood"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Restauracja Seafood</p>
@@ -137,13 +148,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Project_Prime.jpg"
-                alt="Projekt Prime"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Project_Prime.jpg"
+                  alt="Projekt Prime"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Projekt Prime</p>
@@ -153,13 +166,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Project_Boxes.jpg"
-                alt="Projekt Boxes"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Project_Boxes.jpg"
+                  alt="Projekt Boxes"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Projekt Boxes</p>
@@ -169,13 +184,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Inspiration_has_no_Borders.jpg"
-                alt="inspiracja bez granic"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Inspiration_has_no_Borders.jpg"
+                  alt="inspiracja bez granic"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Inspiration has no Borders</p>
@@ -185,13 +202,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Magazine_Limited-Edition.jpg"
-                alt="Magazyn Limited Edition"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Magazine_Limited-Edition.jpg"
+                  alt="Magazyn Limited Edition"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Magazyn Limited Edition</p>
@@ -201,13 +220,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Project_LAB.jpg"
-                alt="Projekt LAB"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Project_LAB.jpg"
+                  alt="Projekt LAB"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Projekt LAB</p>
@@ -217,13 +238,15 @@
                 </div>
               </div>
             </li>
-            <li class="projects_portfolio">
-              <img
-                src="images/Growing_Business.jpg"
-                alt="rosnący biznes"
-                width="370"
-                height="294"
-              />
+            <li class="animation_hidden_portfolio">
+              <div class="projects_portfolio">
+                <img
+                  class="images_projects_portfolio"
+                  src="images/Growing_Business.jpg"
+                  alt="rosnący biznes"
+                />
+                <p class="text_projects_portfolio"></p>
+              </div>
               <div class="borders_cards_portfolio">
                 <div>
                   <p class="name_item_portfolio">Growing Business</p>
