--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 width="370"
                 height="294"
               />
+              <p>Aplikacje komputerowe</p>
             </li>
             <li>
               <img
@@ -158,6 +159,7 @@
                 width="370"
                 height="294"
               />
+              <p>Aplikacje mobilne</p>
             </li>
             <li>
               <img
@@ -166,6 +168,7 @@
                 width="370"
                 height="294"
               />
+              <p>Aplikacje mobilne</p>
             </li>
           </ul>
         </div>
@@ -185,8 +188,11 @@
               <p class="name">John Doe</p>
               <p class="profession">Product Designer</p>
               <ul class="social_media_developer_list cursor">
-                <li class="social_media_developer">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer"
+                    href="https://www.instagram.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -196,8 +202,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://twitter.com/?lang=pl"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -207,8 +216,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl-pl.facebook.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -218,8 +230,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl.linkedin.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -241,8 +256,11 @@
               <p class="name">John Doe</p>
               <p class="profession">Frontend Developer</p>
               <ul class="social_media_developer_list cursor">
-                <li class="social_media_developer">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer"
+                    href="https://www.instagram.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -252,8 +270,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://twitter.com/?lang=pl"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -263,8 +284,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl-pl.facebook.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -274,8 +298,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl.linkedin.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -297,8 +324,11 @@
               <p class="name">John Doe</p>
               <p class="profession">Frontend Developer</p>
               <ul class="social_media_developer_list cursor">
-                <li class="social_media_developer">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer"
+                    href="https://www.instagram.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -308,8 +338,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://twitter.com/?lang=pl"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -319,8 +352,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl-pl.facebook.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -330,8 +366,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl.linkedin.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -353,8 +392,11 @@
               <p class="name">John Doe</p>
               <p class="profession">UI Designer</p>
               <ul class="social_media_developer_list cursor">
-                <li class="social_media_developer">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer"
+                    href="https://www.instagram.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -364,8 +406,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://twitter.com/?lang=pl"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -375,8 +420,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl-pl.facebook.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -386,8 +434,11 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social_media_developer cursor">
-                  <a href="#">
+                <li>
+                  <a
+                    class="social_media_developer cursor"
+                    href="https://pl.linkedin.com/"
+                  >
                     <svg
                       class="social_media_our_team"
                       width="20px"
@@ -407,35 +458,47 @@
         <div class="container">
           <h2 class="our_clients_header">Nasi klienci</h2>
           <ul class="our_clients_list">
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_one"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_one"></use>
+                </svg>
+              </a>
             </li>
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_two"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_two"></use>
+                </svg>
+              </a>
             </li>
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_three"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_three"></use>
+                </svg>
+              </a>
             </li>
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_four"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_four"></use>
+                </svg>
+              </a>
             </li>
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_five"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_five"></use>
+                </svg>
+              </a>
             </li>
-            <li class="our_clients_item">
-              <svg class="our_clients_logos" width="106px" height="60px">
-                <use href="images/icons.svg#client_six"></use>
-              </svg>
+            <li>
+              <a class="our_clients_item" href="#">
+                <svg width="106px" height="60px">
+                  <use href="images/icons.svg#client_six"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
