--- a/index.html
+++ b/index.html
@@ -535,29 +535,41 @@
           <div class="social_media_footer">
             <p class="join_us">DOŁĄCZ DO NAS</p>
             <ul class="social_media_icon_footer_list">
-              <li class="social_media_icon_footer cursor">
-                <a>
+              <li>
+                <a
+                  class="social_media_icon_footer cursor"
+                  href="https://www.instagram.com/"
+                >
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social_media_icon_footer cursor">
-                <a>
+              <li>
+                <a
+                  class="social_media_icon_footer cursor"
+                  href="https://twitter.com/?lang=pl"
+                >
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social_media_icon_footer cursor">
-                <a>
+              <li>
+                <a
+                  class="social_media_icon_footer cursor"
+                  href="https://pl-pl.facebook.com/"
+                >
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social_media_icon_footer cursor">
-                <a>
+              <li>
+                <a
+                  class="social_media_icon_footer cursor"
+                  href="https://pl.linkedin.com/"
+                >
                   <svg class="color_icon_footer" width="20" height="20">
                     <use href="images/icons.svg#icon-linkedin2"></use>
                   </svg>
