--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,12 @@
                   src="images/Graphics_New_Orlean_vs_Golden_Star.jpg"
                   alt="New Orlean vs Golden Star"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -137,7 +142,12 @@
                   src="images/Restoration_Seafood.jpg"
                   alt="Restauracja Seafood"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -155,7 +165,12 @@
                   src="images/Project_Prime.jpg"
                   alt="Projekt Prime"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -173,7 +188,12 @@
                   src="images/Project_Boxes.jpg"
                   alt="Projekt Boxes"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -191,7 +211,12 @@
                   src="images/Inspiration_has_no_Borders.jpg"
                   alt="inspiracja bez granic"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -209,7 +234,12 @@
                   src="images/Magazine_Limited-Edition.jpg"
                   alt="Magazyn Limited Edition"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -227,7 +257,12 @@
                   src="images/Project_LAB.jpg"
                   alt="Projekt LAB"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
@@ -245,7 +280,12 @@
                   src="images/Growing_Business.jpg"
                   alt="rosnący biznes"
                 />
-                <p class="text_projects_portfolio"></p>
+                <p class="text_projects_portfolio">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <div class="borders_cards_portfolio">
                 <div>
