--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <nav class="navigate">
           <ul class="navigate_list">
             <li>
-              <a class="navigate_buttons cursor" href="index.html">Agencja</a>
+              <a class="navigate_buttons color_nav cursor" href="index.html"
+                >Agencja</a
+              >
             </li>
             <li>
               <a class="navigate_buttons cursor" href="portfolio.html"
