--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a class="navigate_buttons cursor" href="index.html">Agencja</a>
             </li>
             <li>
-              <a class="navigate_buttons cursor" href="portfolio.html"
+              <a class="navigate_buttons color_nav cursor" href="portfolio.html"
                 >Portfolio</a
               >
             </li>
