--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
             <li>
               <a class="navigate_buttons cursor" href="index.html">Agencja</a>
             </li>
-            <li>
+            <li class="navigate_buttons_active">
               <a class="navigate_buttons color_nav cursor" href="portfolio.html"
                 >Portfolio</a
               >
@@ -88,7 +88,7 @@
         <div class="container">
           <ul class="card_set_portfolio">
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Technocrack.jpg"
@@ -111,7 +111,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Graphics_New_Orlean_vs_Golden_Star.jpg"
@@ -136,7 +136,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Restoration_Seafood.jpg"
@@ -159,7 +159,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_Prime.jpg"
@@ -182,7 +182,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_Boxes.jpg"
@@ -205,7 +205,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Inspiration_has_no_Borders.jpg"
@@ -228,7 +228,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Magazine_Limited-Edition.jpg"
@@ -251,7 +251,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_LAB.jpg"
@@ -274,7 +274,7 @@
               </div>
             </li>
             <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio">
+              <div class="projects_portfolio cursor">
                 <img
                   class="images_projects_portfolio"
                   src="images/Growing_Business.jpg"
