--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Pasek Zadań-->
         <nav class="navigate">
           <ul class="navigate_list">
-            <li>
+            <li class="navigate_buttons_active">
               <a class="navigate_buttons color_nav cursor" href="index.html"
                 >Agencja</a
               >
