--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,8 @@
       <section>
         <div class="container">
           <ul class="card_set_portfolio">
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Technocrack.jpg"
@@ -110,8 +110,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Graphics_New_Orlean_vs_Golden_Star.jpg"
@@ -135,8 +135,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Restoration_Seafood.jpg"
@@ -158,8 +158,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_Prime.jpg"
@@ -181,8 +181,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_Boxes.jpg"
@@ -204,8 +204,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Inspiration_has_no_Borders.jpg"
@@ -227,8 +227,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Magazine_Limited-Edition.jpg"
@@ -250,8 +250,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Project_LAB.jpg"
@@ -273,8 +273,8 @@
                 </div>
               </div>
             </li>
-            <li class="animation_hidden_portfolio">
-              <div class="projects_portfolio cursor">
+            <li class="animation_hidden_portfolio cursor">
+              <div class="projects_portfolio">
                 <img
                   class="images_projects_portfolio"
                   src="images/Growing_Business.jpg"
