--- a/index.html
+++ b/index.html
@@ -512,77 +512,73 @@
     </main>
     <!-- stopka -->
     <footer class="footer">
-      <div class="container">
+      <div class="container menu">
         <a href="index.html" class="logo_footer"
           ><span class="second-color">Web</span>Studio</a
         >
-        <div class="menu">
-          <address class="adress">
-            <ul class="list_adress_footer">
-              <li>
-                <p class="address_footer">
-                  m. Warszawa, Aleje Jerozolimskie 21
-                </p>
-              </li>
-              <li>
-                <p>
-                  <a href="mailto:info@devstudio.com" class="contacts_footer"
-                    >info@devstudio.com</a
-                  >
-                </p>
-              </li>
-              <li>
-                <a href="tel:+48111111111" class="contacts_footer"
-                  >+48 111 111 111</a
+        <address class="adress">
+          <ul class="list_adress_footer">
+            <li>
+              <p class="address_footer">m. Warszawa, Aleje Jerozolimskie 21</p>
+            </li>
+            <li>
+              <p>
+                <a href="mailto:info@devstudio.com" class="contacts_footer"
+                  >info@devstudio.com</a
                 >
-              </li>
-            </ul>
-          </address>
-          <div class="social_media_footer">
-            <p class="join_us">DOŁĄCZ DO NAS</p>
-            <ul class="social_media_icon_footer_list">
-              <li>
-                <a
-                  class="social_media_icon_footer cursor"
-                  href="https://www.instagram.com/"
-                >
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="social_media_icon_footer cursor"
-                  href="https://twitter.com/?lang=pl"
-                >
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="social_media_icon_footer cursor"
-                  href="https://pl-pl.facebook.com/"
-                >
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="social_media_icon_footer cursor"
-                  href="https://pl.linkedin.com/"
-                >
-                  <svg class="color_icon_footer" width="20" height="20">
-                    <use href="images/icons.svg#icon-linkedin2"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+              </p>
+            </li>
+            <li>
+              <a href="tel:+48111111111" class="contacts_footer"
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="social_media_footer">
+          <p class="join_us">DOŁĄCZ DO NAS</p>
+          <ul class="social_media_icon_footer_list">
+            <li>
+              <a
+                class="social_media_icon_footer cursor"
+                href="https://www.instagram.com/"
+              >
+                <svg width="20" height="20">
+                  <use href="images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social_media_icon_footer cursor"
+                href="https://twitter.com/?lang=pl"
+              >
+                <svg width="20" height="20">
+                  <use href="images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social_media_icon_footer cursor"
+                href="https://pl-pl.facebook.com/"
+              >
+                <svg width="20" height="20">
+                  <use href="images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social_media_icon_footer cursor"
+                href="https://pl.linkedin.com/"
+              >
+                <svg class="color_icon_footer" width="20" height="20">
+                  <use href="images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
