--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
           </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="text_order_service">
-              <button data-modal-close class="close_window" type="button">
+              <button
+                data-modal-close
+                class="close_window cursor"
+                type="button"
+              >
                 <svg width="11px" height="11px">
                   <use href="images/icons.svg#img_close_window"></use>
                 </svg>
