--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>
         </nav>
         <!--kontakt-->
-        <div class="contacts">
+        <div>
           <ul class="contacts_list">
             <li class="mail_header_list">
               <a href="mailto:info@devstudio.com" class="image_header cursor">
